src/scss/partials/_header.scss
.header {
	position: fixed;
	left: 0;
	top: 0;
	background-color: transparent;
	width: 100vw;
	z-index: 999;
	transition:
		background-color 0.5s ease,
		transform 0.5s ease,
		border 0.3s ease;
	border-bottom: 1px solid rgba(255, 255, 255, 0.16);

	.shipping-notice__wrapper {
		max-height: 0px;
		overflow: hidden;
		transition: max-height 0.5s ease;

		.shipping__notice {
			width: 100%;
			text-align: center;
			padding: 11px 0px 15px;
			background-color: $black-primary;
			font-weight: 400;
			font-size: 14px;
			line-height: 157%;
			color: $white;
		}
	}

	.header__content {
		display: flex;
		justify-content: space-between;
		align-items: center;
		padding: 32px 0px;

		.header__info {
			display: flex;
			align-items: center;
			gap: 106px;

			.header__logo {
				color: $white;
				transition: color 0.5s ease;
			}

			.header__menu {
				display: flex;
				gap: 80px;
				align-items: center;

				.menu-item {
					&__content {
						color: $white;
						font-weight: 400;
						font-size: 14px;
						line-height: 157%;
						font-family: $font-family;
						transition: color 0.3s ease;

						&:hover {
							color: $light-grey;
						}
					}

					&__button {
						display: flex;
						align-items: center;
						gap: 15px;

						svg {
							transition: transform 0.5s ease;
						}

						&.active svg {
							transform: rotate(-180deg);
						}
					}
				}
			}
		}

		.header__buttons {
			display: flex;
			align-items: center;
			gap: 24px;

			.header__button-item {
				font-family: $font-family;
				font-weight: 400;
				font-size: 14px;
				line-height: 157%;
				color: $white;
				display: flex;
				align-items: center;
				gap: 2px;
				transition: color 0.3s ease;

				&:hover {
					color: $light-grey;
				}
			}
		}
	}

	&.scrolled,
	&.opened {
		background-color: #fff;

		.header__content {
			.header__info {
				.header__logo {
					color: $black-primary;
				}

				.header__menu {
					.menu-item {
						&__content {
							color: $black-primary;

							&:hover {
								color: $dark-grey-secondary;
							}
						}
					}
				}
			}

			.header__buttons {
				.header__button-item {
					color: $black-primary;

					&:hover {
						color: $dark-grey-secondary;
					}
				}
			}
		}
	}

	.categories__wrapper {
		position: absolute;
		top: 100%;
		background-color: $white;
		width: 100%;
		opacity: 0;
		max-height: 0;
		transition: all 0.5s ease;

		&.active {
			opacity: 1;
		}

		.categories__list {
			display: flex;
			align-items: flex-start;
			gap: 116px;
			padding: 32px 0px 83px;

			.categories__column {
				display: flex;
				flex-direction: column;
				gap: 8px;

				.category__item {
					.category__link {
						font-weight: 400;
						font-size: 14px;
						line-height: 157%;
						color: $black-primary;
					}

					&.title-item {
						margin-bottom: 8px;

						.category__link {
							font-size: 16px;
						}
					}
				}
			}
		}
	}
}

